fix button height, button color, and button order. also prevent horizontal scrolling

--- a/Penspyre V2/src/css/theme.css
+++ b/Penspyre V2/src/css/theme.css
@@ -1853,7 +1853,7 @@ li {
   position: absolute;
   z-index: 1;
   bottom: 125%;
-  left: 50%;
+  left: 40%;
   margin-left: -60px;
   opacity: 0;
   transition: opacity 0.3s;
@@ -1863,7 +1863,7 @@ li {
   content: "";
   position: absolute;
   top: 100%;
-  left: 50%;
+  left: 40%;
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
